--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/timeLeftText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time Left for "
+                android:text="@string/time_left_for"
                 android:textAlignment="center"
                 android:textColor="#2E64A4"
                 android:textSize="12sp"
@@ -44,7 +44,7 @@
                 android:id="@+id/timeLeftText2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Online Test for Design"
+                android:text="@string/online_test_for_design"
                 android:textAlignment="center"
                 android:textColor="#2E64A4"
                 android:textSize="12sp"
@@ -54,7 +54,7 @@
                 android:id="@+id/timeLeftText3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=": "
+                android:text="@string/colon_"
                 android:textAlignment="center"
                 android:textColor="#2E64A4"
                 android:textSize="12sp"
@@ -64,7 +64,7 @@
                 android:id="@+id/timeLeftText4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="5 "
+                android:text="@string/_5"
                 android:textAlignment="center"
                 android:textColor="#2E64A4"
                 android:textSize="12sp"
@@ -74,7 +74,7 @@
                 android:id="@+id/timeLeftText5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Days"
+                android:text="@string/days"
                 android:textAlignment="center"
                 android:textColor="#2E64A4"
                 android:textSize="12sp"
@@ -119,7 +119,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:paddingBottom="4dp"
-            android:text="Bdjobs Test Account - Az1"
+            android:text="@string/job_name"
             android:textAlignment="textStart"
             android:textColor="#333333"
             android:textSize="14sp"
@@ -134,7 +134,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
-            android:text="View Job Details"
+            android:text="@string/view_job_details"
             android:textAlignment="textStart"
             android:textColor="#2F64A3"
             android:textSize="12sp"
@@ -176,11 +176,12 @@
                 android:layout_width="14dp"
                 android:layout_height="14dp"
                 android:layout_marginVertical="4dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginEnd="8dp"
                 android:src="@drawable/online_test_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/test_name_type" />
 
             <TextView
                 android:id="@+id/onlineTextTitle"
@@ -189,13 +190,14 @@
                 android:paddingStart="4dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="Online Test for Design"
+                android:text="@string/test_name"
                 android:textColor="#2F64A3"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/onlineTextIcon"
                 app:layout_constraintStart_toEndOf="@+id/onlineTextIcon"
-                app:layout_constraintTop_toTopOf="@+id/onlineTextIcon" />
+                app:layout_constraintTop_toTopOf="@+id/onlineTextIcon"
+                tools:ignore="RtlSymmetry" />
 
             <ImageView
                 android:id="@+id/onlineText_dateIcon"
@@ -204,7 +206,8 @@
                 android:src="@drawable/date_icon"
                 app:layout_constraintBottom_toBottomOf="@+id/onlineText_dateTitle"
                 app:layout_constraintEnd_toStartOf="@+id/onlineText_dateTitle"
-                app:layout_constraintTop_toTopOf="@+id/onlineText_dateTitle" />
+                app:layout_constraintTop_toTopOf="@+id/onlineText_dateTitle"
+                android:contentDescription="@string/date_icon" />
 
             <TextView
                 android:id="@+id/onlineText_dateTitle"
@@ -213,12 +216,13 @@
                 android:paddingStart="4dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="12 Apr 2022"
+                android:text="@string/date"
                 android:textColor="#333333"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlSymmetry" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,7 +231,7 @@
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
             android:paddingBottom="4dp"
-            android:text="Your test schedule is given below:"
+            android:text="@string/your_test_schedule_is_given_below"
             android:textColor="#333333"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -271,14 +275,15 @@
                     android:layout_height="14dp"
                     android:src="@drawable/date_icon"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/date_icon" />
 
                 <TextView
                     android:id="@+id/scheduleDate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Date"
+                    android:text="@string/date_name"
                     android:textColor="#2F64A3"
                     android:textSize="12sp"
                     android:textStyle="normal"
@@ -292,7 +297,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:layout_marginBottom="8dp"
-                    android:text="14 Apr 2022"
+                    android:text="@string/date_layout"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -315,14 +320,15 @@
                     android:layout_height="14dp"
                     android:src="@drawable/time_icon"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/time_icon" />
 
                 <TextView
                     android:id="@+id/scheduleTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Time"
+                    android:text="@string/time"
                     android:textColor="#2F64A3"
                     android:textSize="12sp"
                     android:textStyle="normal"
@@ -336,7 +342,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:layout_marginBottom="8dp"
-                    android:text="3:00 PM"
+                    android:text="@string/time_time"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -359,14 +365,15 @@
                     android:layout_height="14dp"
                     android:src="@drawable/phone_icon"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/contact_no" />
 
                 <TextView
                     android:id="@+id/scheduleContact"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Contact No"
+                    android:text="@string/contact_no_text"
                     android:textColor="#2F64A3"
                     android:textSize="12sp"
                     android:textStyle="normal"
@@ -380,7 +387,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:layout_marginBottom="8dp"
-                    android:text="+880 16854 46846"
+                    android:text="@string/mobile_number"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -409,7 +416,7 @@
                 android:id="@+id/scheduleReminderText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="This test will be held online, so attend this Online Test from home or any convenient place."
+                android:text="@string/test_venue_info"
                 android:textColor="#992927"
                 android:textSize="12sp"
                 android:textStyle="normal"
@@ -449,14 +456,15 @@
                 android:src="@drawable/user_guide_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/user_guide_des" />
 
             <TextView
                 android:id="@+id/userGuideText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="User Guide"
+                android:text="@string/user_guide"
                 android:textAlignment="textStart"
                 android:textColor="#0B5F8C"
                 android:textSize="12sp"
@@ -484,14 +492,15 @@
                 android:src="@drawable/test_instruction_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/test_instruction" />
 
             <TextView
                 android:id="@+id/textInstructionText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="Test Instructions"
+                android:text="@string/test_instructions"
                 android:textAlignment="textStart"
                 android:textColor="#0B5F8C"
                 android:textSize="12sp"
@@ -519,14 +528,15 @@
                 android:src="@drawable/sample_test_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/sample_test" />
 
             <TextView
                 android:id="@+id/sampleText_Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="Sample Test"
+                android:text="@string/sample_test_text"
                 android:textAlignment="textStart"
                 android:textColor="#0B5F8C"
                 android:textSize="12sp"
@@ -564,14 +574,15 @@
                 android:src="@drawable/icon_confirmed_test"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/confirm" />
 
             <TextView
                 android:id="@+id/confirmed_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                android:text="Confirmed"
+                android:text="@string/confirmed"
                 android:textColor="#13A10E"
                 android:textSize="14sp"
                 android:textStyle="bold"
@@ -587,7 +598,8 @@
                 android:src="@drawable/date_icon"
                 app:layout_constraintBottom_toBottomOf="@+id/confirmed_date_text"
                 app:layout_constraintEnd_toStartOf="@+id/confirmed_date_text"
-                app:layout_constraintTop_toTopOf="@+id/confirmed_date_text" />
+                app:layout_constraintTop_toTopOf="@+id/confirmed_date_text"
+                android:contentDescription="@string/date" />
 
             <TextView
                 android:id="@+id/confirmed_date_text"
@@ -596,12 +608,13 @@
                 android:paddingStart="4dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
-                android:text="12 Apr 2022"
+                android:text="@string/_12_apr_2022"
                 android:textColor="#333333"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="RtlSymmetry" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -612,7 +625,7 @@
             android:paddingVertical="16dp"
             android:paddingStart="32dp"
             android:paddingEnd="16dp"
-            android:text="You have  confirmed the online test schedule. "
+            android:text="@string/you_have_confirmed_the_online_test_schedule"
             android:textAlignment="textStart"
             android:textColor="#333333"
             android:textSize="12sp"
@@ -639,7 +652,7 @@
             android:id="@+id/requestChangedText"
             android:layout_width="180dp"
             android:layout_height="wrap_content"
-            android:text="Your request has been sent to the employer"
+            android:text="@string/your_request_has_been_sent_to_the_employer"
             android:textColor="#244E26"
             android:textSize="12sp"
             android:textStyle="normal"
@@ -658,7 +671,7 @@
             android:paddingTop="8dp"
             android:paddingRight="16dp"
             android:paddingBottom="8dp"
-            android:text="Change"
+            android:text="@string/change"
             android:textAllCaps="false"
             android:textColor="#244E26"
             android:textSize="12sp"
@@ -668,7 +681,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:strokeColor="#4D244E26"
-            app:strokeWidth="1dp" />
+            app:strokeWidth="1dp"
+            android:focusable="true" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -705,13 +719,14 @@
             android:layout_height="20dp"
             android:src="@drawable/exclude"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/participation_info" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:text="You can participate in the test from here. To participate, button will be available 1 hour before the test."
+            android:text="@string/you_can_participate_in_the_test_from_here_to_participate_button_will_be_available_1_hour_before_the_test"
             android:textColor="#2F64A3"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@+id/imageView"
